--- a/Modulo-03-HTML-CSS/Aula03/street_fighter.html
+++ b/Modulo-03-HTML-CSS/Aula03/street_fighter.html
@@ -2,6 +2,76 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title>Street Fighter</title>
+
+    <style>
+      body {
+        margin: 0;
+      }
+
+      .container{
+        width: 80%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align:center;
+      }
+
+      .header {
+
+      }
+
+      .imagem-cortada{
+        position: relative;
+        height: 340px;
+        overflow: hidden;
+      }
+
+      .imagem-cortada img{
+        position: relative;
+        left: -1px;
+        width: 101%;
+      }
+
+      .menu-header {
+        background-color: rgba(169,169,169,1)
+        width:300px;        
+        font-weight: bold;
+        word-spacing: 50px;
+
+      }
+      .menu-header span{
+        word-spacing: 3px;
+      }
+
+    </style>
+  </head>
+  <body>
+
+    <div class="container">    
+      <div class="header">
+        <div class="imagem-cortada">
+          <img src="https://assets.vg247.it/current//2016/02/street-fighter-5-guida-mosse-trucchi.jpg" alt="Ryu Street Fighter">
+        </div>
+        <div class="menu-header">
+          <a href="">Inicio</a>
+          <a href="">Noticias</a>
+          <a href=""><span>Ficha Técnica<span></a>
+          <a href="">Sobre</a>
+        </div>
+      </div>
+    </div>
+
+
+
+  </body>
+</html>
+
+<!--<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
     <title>Street Fighter</title>
     <style>
     body {
@@ -34,3 +104,4 @@
 
   </body>
 </html>
+-->
