feat(aula08): adicionar mudanças ao trabalho final

--- a/Modulo-06-.NET/LocaGames.Api/front/index.html
+++ b/Modulo-06-.NET/LocaGames.Api/front/index.html
@@ -37,4 +37,6 @@
 <script src="login/login.controller.js" type="text/javascript"></script>
 <script src="privado/privado.controller.js" type="text/javascript"></script>
 
+<script src="Cliente/ClienteController.js" type="text/javascript"></script> 
+<script src="Login/LoginController.js" type="text/javascript"></script> 
 </html>
