--- a/Modulo-06-.NET/LocaGames/index.html
+++ b/Modulo-06-.NET/LocaGames/index.html
@@ -10,17 +10,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js" type="text/javascript"></script>
     <script src="https://rawgit.com/cwi-crescer-2017-1/instrutores/master/modulo-05-angularjs/auth/auth.module.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!--<script src="ui-bootstrap-tpls-2.5.0.min.js"></script>-->
+    <script src="ui-bootstrap-tpls-2.5.0.min.js"></script>
     <script src="front/app.rotas.js"></script>
 
     <script src="front/cliente/clienteController.js"></script>
     <script src="front/cliente/clienteService.js"></script>
+    <script src="front/locacao/locacaoController.js"></script>
+    <script src="front/locacao/locacaoService.js"></script>
     <!--
     <script src="front/login/loginController.js"></script>
     <script src="front/login/authConfig.js"></script>
 
-    <script src="front/locacao/locacaoController.js"></script>
-    <script src="front/locacao/locacaoService.js"></script>
+    
 
     <script src="front/relatorio/relatorioService.js"></script>
     <script src="front/relatorio/relatorioController.js"></script>
@@ -31,7 +32,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="row">
         <ng-view></ng-view>
+      </div>
     </div>
   </body>
 </html>
