feat(LocaGames): adicionar tela locacao

--- a/Modulo-06-.NET/LocaGames/front/cliente/cliente.html
+++ b/Modulo-06-.NET/LocaGames/front/cliente/cliente.html
@@ -11,10 +11,13 @@
         <label for="cpf">Cpf</label>
         <input ng-model="cliente.CPF" required type="text" class="form-control" placeholder="11 dígitos, somente números">
     </div>
+
     <label>Sexo: </label>
-    <label><input type="radio" name="sexo" ng-model="cliente.Genero" value="m" required>Masculino</label>
-    <label><input type="radio" name="sexo" ng-model="cliente.Genero" value="f" required>Feminino</label>
-    <label><input type="radio" name="sexo" ng-model="cliente.Genero" value="nd" required>Não informado</label>
+    <div class="radio">
+      <label><input type="radio" name="sexo" ng-model="cliente.Genero" value="m" required>Masculino</label>
+      <label><input type="radio" name="sexo" ng-model="cliente.Genero" value="f" required>Feminino</label>
+      <label><input type="radio" name="sexo" ng-model="cliente.Genero" value="nd checked" required>Não informado</label>
+    </div>
 
     <div class="form-group">
         <label for="dataNascimento">Data de Nascimento</label>
