--- a/Modulo-06-.NET/LocaGames/index.html
+++ b/Modulo-06-.NET/LocaGames/index.html
@@ -2,7 +2,7 @@
 <html ng-app='app'>
   <head>
     <meta charset="utf-8">
-    <title>Locadora Crescer</title>
+    <title>LocaGames</title>
     <script src="https://code.angularjs.org/1.6.4/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
@@ -10,18 +10,60 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js" type="text/javascript"></script>
     <script src="https://rawgit.com/cwi-crescer-2017-1/instrutores/master/modulo-05-angularjs/auth/auth.module.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="ui-bootstrap-tpls-2.5.0.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="front/app.rotas.js"></script>
 
     <script src="front/cliente/clienteController.js"></script>
     <script src="front/cliente/clienteService.js"></script>
     <script src="front/locacao/locacaoController.js"></script>
     <script src="front/locacao/locacaoService.js"></script>
+
+    <style media="screen">
+    .container{
+      background: azure;
+    }
+      .header{
+        font-size: 20px;
+        height: 50px;
+        padding-left: 20px;
+        padding-top: 10px;
+        word-spacing: 30px;
+      }
+      .header a {
+        color: DarkSlateGray ;
+        text-decoration: none;
+      }
+      .header a :hover{
+        text-decoration: underline;
+        color: darkgrey;
+      }
+
+      hr.style18 {
+        height: 30px;
+        border-style: solid;
+        border-color: #8c8b8b;
+        border-width: 1px 0 0 0;
+        border-radius: 20px;
+      }
+      hr.style18:before {
+        display: block;
+        content: "";
+        height: 30px;
+        margin-top: -31px;
+        border-style: solid;
+        border-color: #8c8b8b;
+        border-width: 0 0 1px 0;
+        border-radius: 20px;
+      }
+
+    </style>
     <!--
     <script src="front/login/loginController.js"></script>
     <script src="front/login/authConfig.js"></script>
 
-    
+
 
     <script src="front/relatorio/relatorioService.js"></script>
     <script src="front/relatorio/relatorioController.js"></script>
@@ -33,7 +75,13 @@
   <body>
     <div class="container">
       <div class="row">
-        <ng-view></ng-view>
+        <div class="header">
+          <a href="http://localhost:8080/#!/cliente">Clientes</a>
+          <a href="http://localhost:8080/#!/locacao">Locação</a>
+        </div>
+        <hr class="style18">
+          <ng-view></ng-view>
+        </div>
       </div>
     </div>
   </body>
